# todo-api-test

./: EVALUATION.md  README.md  RFC-001-todo-api.md  db-optimization.md  pyproject.toml  test_todos.py  todo-erd.md  verify-steps.md
.github/workflows/: ci.yml
app/: main.py
tests/: test_todos.py
